@@ -200,9 +200,7 @@ public class JsonEncoder extends ParsingEncoder implements Parser.ActionHandler 
       writeBytes(bytes.array(), bytes.position(), bytes.remaining());
     } else {
       byte[] b = new byte[bytes.remaining()];
-      for (int i = 0; i < b.length; i++) {
-        b[i] = bytes.get();
-      }
+      bytes.duplicate().get(b);
       writeBytes(b);
     }
   }
